<resources>
    <string name="app_name">Pump Control</string>
    <string name="action_settings">Settings</string>

    <string name="bag_size">Bag Size:</string>
    <string name="duration">Time of Surgery (min):</string>

    <string-array name="bag_size_entries">
        <item>250ml</item>
        <item>500ml</item>
        <item>750ml</item>
        <item>1000ml</item>
    </string-array>

    <string name="bag_size_prompt">Select a Bag Size</string>
    <string name="amount_text">Amount of Solution to Add: (per 1L bag): 166.5mL</string>
    <string name="bags_needed_text">Bags needed for Surgery</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="ml_left">ml Left in Bag:</string>
    <string name="title_activity_secondary">SecondaryActivity</string>
    <string name="timer_zero">0:00</string>
    <string name="toggle_pump">Toggle Pump</string>
    <string name="toggle_text">Toggle Pump: </string>

    <string name="hello_world">Hello world!</string>


</resources>
