<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="10dp">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/connectionStatus"
    android:textStyle="bold"
    android:layout_gravity="center"
    android:textSize="24dp" />

<Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="Connect"
    android:id="@+id/connect"
    android:layout_gravity="center_horizontal"
    android:enabled="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Low"
            android:id="@+id/low" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Mid"
            android:id="@+id/mid" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="High"
            android:id="@+id/high" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mode"
        android:text="@string/mode_text"
        android:layout_gravity="center_horizontal"
        android:textSize="24dp" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_text"
        android:layout_gravity="center"
        android:paddingEnd="25dp"
        android:textStyle="bold"
        android:textSize="24dp"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amount_add"
        android:layout_gravity="center" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal"
    android:layout_weight="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timer"
        android:text="@string/timer_zero"
        android:layout_gravity="center"
        android:textSize="80dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:gravity="center_horizontal" />

</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_horizontal">

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/begin_button"
        android:text="@string/start"
        android:layout_gravity="center" />

    <Space
        android:layout_width="5dp"
        android:layout_height="match_parent" />

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/stop_button"
        android:text="@string/stop"
        android:layout_gravity="center" />


</LinearLayout>
</LinearLayout>